--- a/aula11-reflection.mapper/pom.xml
+++ b/aula11-reflection.mapper/pom.xml
@@ -18,4 +18,5 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+    <name>aula11-reflection.mapper</name>
 </project>
